# tauri-whisper

./: .gitignore  README.md  package-lock.json  package.json  test_audio.md  test_audio.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
