[package]
name = "tauri-whisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
whisper-rs = { path = "../whisper-rs" }
anyhow = "1.0.98"
cpal = "0.15"
tokio = { version = "1.0", features = ["full"] }
ringbuf = "0.3"
screencapturekit = "0.3.6"
core-foundation = "0.10.1"
core-media-rs = { version = "0.3" }

# System audio capture dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "0.3", optional = true }
ruhear = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = { version = "0.19", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
pulse = { version = "0.5", optional = true }

# Note: Set MACOSX_DEPLOYMENT_TARGET=10.15 environment variable when building on macOS
# This is required for whisper.cpp's filesystem APIs

